compiler-bin/iris-spago/tests/snapshots/manifest__parses_legacy_extra_packages.snap
---
source: compiler-bin/iris-spago/tests/manifest.rs
expression: "parse_fixture(\"workspace-extra-legacy.yaml\")"
---
Manifest {
    package: Some(
        Package {
            name: "application",
            description: None,
            dependencies: [
                Dependency {
                    name: "legacy-package",
                    constraint: None,
                },
            ],
            run: None,
            test: None,
        },
    ),
    workspace: Some(
        Workspace {
            package_set: None,
            extra_packages: {
                "legacy-package": Legacy(
                    LegacyPackage {
                        repo: "https://github.com/example/project.git",
                        version: "v1.2.3",
                        dependencies: [
                            Dependency {
                                name: "prelude",
                                constraint: None,
                            },
                            Dependency {
                                name: "effect",
                                constraint: None,
                            },
                        ],
                    },
                ),
            },
        },
    ),
}
