compiler-bin/iris-spago/tests/snapshots/manifest__parses_minimal_package.snap
---
source: compiler-bin/iris-spago/tests/manifest.rs
expression: "parse_fixture(\"minimal-package.yaml\")"
---
Manifest {
    package: Some(
        Package {
            name: "minimal",
            description: None,
            dependencies: [],
            run: None,
            test: None,
        },
    ),
    workspace: None,
}
