compiler-bin/iris-spago/tests/snapshots/manifest__parses_registry_extra_packages.snap
---
source: compiler-bin/iris-spago/tests/manifest.rs
expression: "parse_fixture(\"workspace-extra-registry.yaml\")"
---
Manifest {
    package: Some(
        Package {
            name: "application",
            description: None,
            dependencies: [
                Dependency {
                    name: "console",
                    constraint: None,
                },
                Dependency {
                    name: "prelude",
                    constraint: None,
                },
            ],
            run: None,
            test: None,
        },
    ),
    workspace: Some(
        Workspace {
            package_set: Some(
                Registry {
                    registry: "64.10.0",
                },
            ),
            extra_packages: {
                "console": Registry(
                    "6.1.0",
                ),
                "prelude": Registry(
                    "6.0.0",
                ),
            },
        },
    ),
}
