compiler-bin/iris-spago/tests/snapshots/manifest__parses_unconsumed_future_options.snap
---
source: compiler-bin/iris-spago/tests/manifest.rs
---
Manifest {
    package: Some(
        Package {
            name: "application",
            description: Some(
                "Carries options Iris never consumes.",
            ),
            dependencies: [],
            run: None,
            test: None,
        },
    ),
    workspace: Some(
        Workspace {
            package_set: Some(
                Registry {
                    registry: "75.3.0",
                },
            ),
            extra_packages: {},
        },
    ),
}
