compiler-bin/iris-spago/tests/snapshots/manifest__rejects_constrained_test_without_main.snap
---
source: compiler-bin/iris-spago/tests/manifest.rs
expression: error.to_string()
---
package.test: missing field `main` at line 5 column 5
